Fixed tabzilla panel z-index.

--- a/static/css/event/every-moment-base.less
+++ b/static/css/event/every-moment-base.less
@@ -18,7 +18,7 @@
 #tabzilla-panel {
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 1001;
 }
 
 #tabzilla.tabzilla-opened {
